--- a/style .css
+++ b/style .css
@@ -33,25 +33,73 @@
     margin-bottom: 1.5rem;
 }
 .section1 .items{
-    margin: 0 -30px;
 }
 .section1 .item{
     padding: 0 30px;
+    border: 1px solid #2b2b2b;
+    margin-right: 20px;
+    position: relative;
+    height: 350px;
+    width: 350px;
+    border-radius: 50%;
+    transition: 0.5s;
 }
+.section1 .item:hover{
+    border-color: red;
+}
+/* .section1 .item::before{
+    content: '';
+    width: 0%;
+    position: absolute;
+    left: 0; top: 0px;
+    transition: 1s;
+    height: 2px;
+    background: red;
+}
+.section1 .item::after{
+    content: '';
+    width: 0%;
+    position: absolute;
+    bottom: -1px; right: 0;
+    transition: 1s;
+    height: 2px;
+    background: red;
+} */
+
+/* .section1 .item:hover{
+    border-left:2px solid red;
+    border-right:2px solid red;
+} */
+/* .section1 .item:hover::before{
+    width: 100%;
+}
+.section1 .item:hover::after{
+    width: 100%;
+} */
 .section1 .item .pic{
-    height: 300px;
-    margin-bottom: 15px;
+    position:absolute;
+    top: 20%; left: 50%;
+    transform: translateX(-50%);
 }
 .section1 .item .pic img{
-    margin: 0 auto;
-    padding-top: 50px;
+    width: 100%;
+}
+.section1 .item .pic1{
+    left: 55%;
 }
 .section1 .item .pic1 img{
-    padding-top: 0;
+    width: 80%;
+}
+.section1 .item .pic2{
+    top: 30%;
 }
 
 .section1 .item .txt{
     text-align: center;
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .section1 .item .txt div{
     font-size: 1.6rem;
